# global-analytics

./: .env.example  .gitignore  CONTEXT.md  Makefile  README.md  depara-unimed-global.ipynb  main.py  pyproject.toml
configs/: job_cost_stock.yaml  job_cost_stock_full.yaml  job_cost_stock_pilot_50.yaml  job_full.yaml  job_pilot.yaml
data/depara-unimed/: Curva ABC - CD 05.26.xlsx  fase1_comparison.csv  fase1_llm_matches.csv  fase1_llm_priority.csv  fase1_llm_reanalyze.csv  fase1_matches_long.csv  fase2_price_report.csv  fase2_price_report.html  fase2_price_report.xlsx  fase2_price_report_guia.md  fase2_price_sku.csv  global_df.csv  llm_cache.sqlite  match_preview.csv
depara/: cli.py  fase1_similarity.py  fase2_prices.py  price_sanity.py  price_units.py  report_html.py  sources.py
depara/api/: env_overrides.py  main.py  progress.py  schemas.py  storage.py  worker.py
depara/contract/: catalog_join.py  config_loader.py  ingest.py  models.py  price_rules.md  templates.py  unit_price.py  validation.py
depara/llm/: agent.py  cache.py  candidates.py  config.py  matcher.py  priority.py  reanalyze.py  reanalyze_agent.py  schemas.py
depara/medication/: candidate_signals.py  cli.py  enrich.py  l2_identity.md  models.py  normalizer.py  prompt_enrich.py  ray_dw.py  reviewer.py
depara/pipeline/: fase1.py  progress.py  run_job.py  summary.py
depara/ui/: _onboarding_test_app.py  (+8 more)
scripts/: benchmark_signal_pilot.py  regenerate_fase1_cost_stock.py
tests/: test_api.py  test_candidate_signals.py  test_contract_ingest.py  test_env_overrides.py  test_env_settings.py  test_job_progress.py  test_medication_normalizer.py  test_onboarding_ui.py  test_pipeline_progress.py  test_price_sanity.py  test_regression_pilot.py  test_report_html.py  test_report_view.py  test_reviewer.py  test_run_job_matches.py  test_ui_client.py  test_unit_price.py  test_validation.py
(+2 files in other folders)
