[project]
name = "global-analytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.4.1",
    "fastapi>=0.115.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pydantic-ai>=1.107.0",
    "pydantic-settings>=2.14.1",
    "python-multipart>=0.0.20",
    "httpx>=0.28.0",
    "streamlit>=1.42.0",
    "python-levenshtein>=0.27.3",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "spacy>=3.8.14",
    "thefuzz>=0.22.1",
    "xlrd>=2.0.2",
    "pyyaml>=6.0.2",
]

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.9"]

[project.scripts]
depara = "depara.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["depara"]

[tool.uv]
package = true

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["depara/medication", "depara/contract", "depara/pipeline", "depara/api", "depara/ui", "depara/report_html.py", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"depara/report_html.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "ray_dw: requires ray-dw-pipeline on PYTHONPATH",
]
